fix(pictures): alignment fix

--- a/css/home.scss
+++ b/css/home.scss
@@ -50,7 +50,7 @@ h2 {
     justify-content: center;
 
     background-size: cover;
-    background-position: center;
+    background-position: top center;
   }
 
   h3 {
